# tcc-project

./: .gitignore  nuxt.config.ts  package.json  pnpm-lock.yaml  pylsp.spec  tailwind.config.ts
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: AppHeader.vue  CodeEditor.vue  LanguageAlert.vue  TexEditor.vue
app/components/Problem/: CreateModal.vue  LoadButton.vue
app/components/common/: Dropdown.vue
app/composables/: useCustomToast.ts  useErrorToast.ts  useLsp.ts  useMonaco.ts  useTauri.ts
app/editor/extensions/: mathematics.ts
app/layouts/: default.vue
app/middleware/: removeProblem.ts
app/pages/: index.vue  problem.vue  settings.vue
app/pages/problem/: index.vue
app/plugins/: monaco-themes.client.ts  monaco.ts  tauri.ts
app/stores/: languageDetails.ts  problem.ts  settings.ts  tauri.ts
app/types/: problem.ts  settings.ts  tauri.ts
scripts/: build-pylsp.sh  download-clangd.sh
src-tauri/: Cargo.toml  compile_flags.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/includes/bits/: stdc++.h
src-tauri/src/: commands.rs  lib.rs  lsp.rs  polygon.rs  problem.rs  project.rs  runner.rs  settings.rs  util.rs
src-tauri/src/commands/: compile.rs  lsp.rs  problems.rs  settings.rs
src-tauri/src/lsp/: binary_resolver.rs  bridge.rs  protocol.rs  registry.rs  server.rs
src-tauri/src/lsp/server/: clangd.rs  pylsp.rs
src-tauri/src/polygon/: error.rs  polygon_credentials.rs
src-tauri/src/problem/: definition.rs  manager.rs  registration.rs  statement.rs
src-tauri/src/runner/: simple_runner.rs
(+7 files in other folders)
